--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "prisma": "^6.19.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
