--- a/.github/workflows/backend-check.yml
+++ b/.github/workflows/backend-check.yml
@@ -10,6 +10,8 @@ jobs:
   backend-check:
     name: Backend Code Quality Check
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       # 1️⃣ Checkout code
